iptables-persistent/rules.v4
# Generated by iptables-save v1.8.9 (nf_tables) on Tue Apr 30 22:26:54 2024
*filter
:INPUT DROP [119:4554]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [487:52964]
# 尝试ssh爆破黑名单，禁止这些IP发起新连接
-A INPUT -s 91.92.246.151/32 -m state --state NEW -j DROP
-A INPUT -s 172.104.144.228/32 -m state --state NEW -j DROP
-A INPUT -s 2.57.122.121/32 -m state --state NEW -j DROP
-A INPUT -s 80.94.92.241/32 -m state --state NEW -j DROP
-A INPUT -s 68.178.164.198/32 -m state --state NEW -j DROP
-A INPUT -s 193.35.18.64/32 -m state --state NEW -j DROP
# 开放端口
#-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
# 基础规则
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Tue Apr 30 22:26:54 2024
